// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boxSuppress renders 0 1`] = `
Array [
  .c0 {
  box-suppress: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSuppress renders function 1`] = `
Array [
  .c0 {
  box-suppress: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: has;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: has;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSuppress renders invalid theme path 1`] = `
Array [
  .c0 {
  box-suppress: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSuppress renders negative number 1`] = `
Array [
  .c0 {
  box-suppress: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSuppress renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  box-suppress: July;
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-suppress: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: July;
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-suppress: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-suppress: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-suppress: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxSuppress renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    box-suppress: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-suppress: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    box-suppress: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-suppress: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-suppress: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-suppress: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-suppress: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxSuppress renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  box-suppress: July;
}

@media May {
  .c0 {
    box-suppress: August;
  }
}

@media April {
  .c0 {
    box-suppress: September;
  }
}

@media January {
  .c0 {
    box-suppress: November;
  }
}

@media April {
  .c0 {
    box-suppress: August;
  }
}

@media June {
  .c0 {
    box-suppress: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: July;
}

@media May {
  .c0 {
    box-suppress: August;
  }
}

@media April {
  .c0 {
    box-suppress: September;
  }
}

@media January {
  .c0 {
    box-suppress: November;
  }
}

@media April {
  .c0 {
    box-suppress: August;
  }
}

@media June {
  .c0 {
    box-suppress: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-suppress: November;
  }
}

@media April {
  .c0 {
    box-suppress: January;
  }
}

@media January {
  .c0 {
    box-suppress: December;
  }
}

@media April {
  .c0 {
    box-suppress: April;
  }
}

@media June {
  .c0 {
    box-suppress: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-suppress: November;
  }
}

@media April {
  .c0 {
    box-suppress: January;
  }
}

@media January {
  .c0 {
    box-suppress: December;
  }
}

@media April {
  .c0 {
    box-suppress: April;
  }
}

@media June {
  .c0 {
    box-suppress: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxSuppress renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    box-suppress: July;
  }
}

@media April {
  .c0 {
    box-suppress: August;
  }
}

@media January {
  .c0 {
    box-suppress: September;
  }
}

@media April {
  .c0 {
    box-suppress: November;
  }
}

@media June {
  .c0 {
    box-suppress: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    box-suppress: July;
  }
}

@media April {
  .c0 {
    box-suppress: August;
  }
}

@media January {
  .c0 {
    box-suppress: September;
  }
}

@media April {
  .c0 {
    box-suppress: November;
  }
}

@media June {
  .c0 {
    box-suppress: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-suppress: January;
  }
}

@media April {
  .c0 {
    box-suppress: December;
  }
}

@media January {
  .c0 {
    box-suppress: April;
  }
}

@media April {
  .c0 {
    box-suppress: May;
  }
}

@media June {
  .c0 {
    box-suppress: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-suppress: January;
  }
}

@media April {
  .c0 {
    box-suppress: December;
  }
}

@media January {
  .c0 {
    box-suppress: April;
  }
}

@media April {
  .c0 {
    box-suppress: May;
  }
}

@media June {
  .c0 {
    box-suppress: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxSuppress renders postitive number 1`] = `
Array [
  .c0 {
  box-suppress: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSuppress renders string 1`] = `
Array [
  .c0 {
  box-suppress: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: June;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: June;
}

<div
    className="c0"
  />,
]
`;

exports[`boxSuppress renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`boxSuppress renders valid theme path 1`] = `
Array [
  .c0 {
  box-suppress: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-suppress: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
